메인 리뉴얼 적용

--- a/main.html
+++ b/main.html
@@ -147,9 +147,18 @@
 
             <section class="main_issue">
                 <ul class="main_img slider">
-                    <li><a href="http://www.naver.com"><img src="sources/images/main.png" alt="메인사진1"></a></li>
-                    <li><a href="http://www.naver.com"><img src="sources/images/main.png" alt="메인사진1"></a></li>
+                    <li><a href=""><img src="sources/images/main01.png" alt="메인사진1"></a></li>
+                    <li><a href=""><img src="sources/images/main02.png" alt="메인사진1"></a></li>
+                    <li><a href=""><img src="sources/images/main03.png" alt="메인사진1"></a></li>
+                    <li><a href=""><img src="sources/images/main04.png" alt="메인사진1"></a></li>
                 </ul>
+
+                <div class="controls">
+                    <button class="prev"><i class='bx bx-left-arrow-alt'></i>이전슬라이드</button>
+                    <button class="stop"><i class='bx bx-pause-circle' ></i>슬라이드 정지</button>
+                    <button class="next"><i class='bx bx-right-arrow-alt' ></i>다음슬라이드</button>
+
+                </div>
             </section>
 
             <section class="main_slogan">
@@ -201,43 +210,26 @@
                     </div>
 
 
-                    <div class="notice notice02">
-
-                        <h3>통합돌봄소식 <a href="">통합돌봄 게시판 바로가기<i class='bx bx-plus' ></i></h3>
-
-                        <div class="outline">
-                            <div class="item">
-                                <a href="#">
-                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
-                                    <span>장애인 가족기능강화 프로그램 참가자 모집</span>
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#">
-                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
-                                    <span>장애인 가족기능강화 프로그램 참가자 모집</span>
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#">
-                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
-                                    <span>장애인 가족기능강화 프로그램 참가자 모집</span>
-                                </a>
-                            </div>
-                        </div>
-
-
-                        <div class="btn_set">
-                            <button class="btn left">이전게시물<i class='bx bxs-chevron-left'></i></button>
-                            <button class="btn right">다음게시물<i class='bx bxs-chevron-right'></i></button>
-                        </div>
-                    </div>
 
                     <div class="out_news">
 
                         <h3>복지뉴스 <a href="">복지뉴스 게시판 바로가기<i class='bx bx-plus' ></i></a></h3>
 
                         <div class="outline">
+                            <div class="item">
+                                <a href="#">
+                                    <span>장애인 가족기능강화 프로그램 참가자 모집</span>
+                                    <p class="name">제주의소리</p>
+                                    <p class="date">2020.09.01</p>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <span>장애인 가족기능강화 프로그램 참가자 모집</span>
+                                    <p class="name">제주의소리</p>
+                                    <p class="date">2020.09.01</p>
+                                </a>
+                            </div>
                             <div class="item">
                                 <a href="#">
                                     <span>장애인 가족기능강화 프로그램 참가자 모집</span>
@@ -285,13 +277,63 @@
                 </div>
             </section>
 
+            <section class="main_carenews">
+                <div class="container">
+
+                    <h3>통합돌봄소식 <a href="">통합돌봄소식 게시판 바로가기<i class='bx bx-plus' ></i></h3>
+                        <div class="outline">
+                            <div class="item">
+                                <a href="#">
+                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
+                                    <div class="text">
+                                        <span>장애인 가족기능강화 프로그램 참가자 모집</span>
+                                        <i>2021-08-31</i>
+
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
+                                    <div class="text">
+                                        <span>장애인 가족기능강화 프로그램 참가자 모집</span>
+                                        <i>2021-08-31</i>
+
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
+                                    <div class="text">
+                                        <span>장애인 가족기능강화 프로그램 참가자 모집</span>
+                                        <i>2021-08-31</i>
+
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
+                                    <div class="text">
+                                        <span>장애인 가족기능강화 프로그램 참가자 모집</span>
+                                        <i>2021-08-31</i>
+
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+
+                </div>
+            </section>
+
             <section class="photo_zone">
                 <div class="container">
 
                     <div class="tabs">
-                        <a data="tab01" class="on">사진자료</a>
-                        <a data="tab02">FACEBOOK</a>
-                        <a data="tab03">영상자료</a>
+                        <a data="tab01" class="on">WEBZINE</a>
+                        <a data="tab02">영상자료</a>
                     </div>
 
 
@@ -394,51 +436,6 @@
                     </div>
 
 
-
-                    <div class="photo_list tab03">
-                        <div class="outline">
-                            <div class="item">
-                                <a href="#">
-                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
-                                    <span>3장애인 가족기능강화 프로그램 참가자 모집</span>
-                                    <p class="date">2020.09.01</p>
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#">
-                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
-                                    <span>장애인 가족기능강화 프로그램 참가자 모집</span>
-                                    <p class="date">2020.09.01</p>
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#">
-                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
-                                    <span>장애인 가족기능강화 프로그램 참가자 모집</span>
-                                    <p class="date">2020.09.01</p>
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#">
-                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
-                                    <span>장애인 가족기능강화 프로그램 참가자 화 프로그램 참가자 모화 화 프로모집</span>
-                                    <p class="date">2020.09.01</p>
-                                </a>
-                            </div>
-                            <div class="item">
-                                <a href="#">
-                                    <p class="image"><img src="sources/images/news2.jpg" alt=""></p>
-                                    <span>장애인 가족기능강화 프로그램 참가자 화 프로그램 참가자 모화 화 프로모집</span>
-                                    <p class="date">2020.09.01</p>
-                                </a>
-                            </div>
-                        </div>
-
-                        
-                        <button class="btn left">이전게시물<i class='bx bxs-chevron-left'></i></button>
-                        <button class="btn right">다음게시물<i class='bx bxs-chevron-right'></i></button>
-
-                    </div>
 
 
 
